--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Streamdata Gallery
-url: aws-directory-service.api.streamdata.gallery
+title: Streamdata Gallery AWS Directory Service
+url: aws-directory-service.streamdata.gallery
 tag: AWS Directory Service
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
-github_user: streamdata-gallery-organizations
+github_user: streamdata-gallery
 github_repo: aws-directory-service
 github_branch: master
 collections:
